# portfolio-risk-agent

./: .env.example  .gitignore  README.md  app_ui.py  app_views.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: sample_concentrated.csv  sample_preretiree.csv
docs/: 01-aim.md  02-repo-and-deploy.md  03-spec.md  04-workflow.md  05-phase2-spec.md  AGENT-framework.md  cheatsheet.md  sample-report.html
src/pra/: __init__.py  cli.py  config.py  models.py  pipeline.py  portfolio.py  prices.py
src/pra/agents/: __init__.py  narrative.py
src/pra/analytics/: __init__.py  allocation.py  concentration.py  rebalance.py  risk.py
src/pra/report/: __init__.py  render.py  template.html
src/pra/suitability/: __init__.py  capacity.py  profile.py  recommend.py  retirement.py  scoring.py  stress.py
