[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-risk-agent"
version = "0.1.0"
description = "Client-ready portfolio risk reporting with tax-aware rebalancing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lucas Rosales" }]
keywords = ["finance", "portfolio", "risk", "rebalancing", "advisory"]

dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

# The analytics library core does not depend on Streamlit — the web app is an
# optional extra so `pra` can be used headless. Streamlit is also in
# requirements.txt for one-click Streamlit Community Cloud deployment.
[project.optional-dependencies]
app = ["streamlit>=1.40"]

[project.urls]
Repository = "https://github.com/lucasgrosales1/portfolio-risk-agent"

# Installing the project creates a `pra` command, so there's no need to
# remember module paths or set PYTHONPATH.
[project.scripts]
pra = "pra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pra = ["report/*.html"]
